# can

./: .clangd  .gitignore  CMakeLists.txt  README.md  getif.out
data/midifiles/: 4chords.mid  chromatic.mid  cmaj.mid  twinkle.mid
fonts/: arial.h
src/: App.cpp  App.hpp  can.cpp  main.cpp
src/can/: MidiViewer.cpp  MidiViewer.hpp  SDLptr.hpp  Viewable.hpp  Viewer.hpp  helper.cpp  helper.hpp
src/helper/: heatmap.hpp
